--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.3",
+    "swiper": "^11.0.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
